Task_and_Workflow_Management/tenant_management/logs/app.log
2026-02-27 10:45:40 | INFO | django.utils.autoreload | Watching for file changes with StatReloader
2026-02-27 10:45:42 | ERROR | django.request | Internal Server Error: /login/
Traceback (most recent call last):
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\base.py", line 577, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'endblock'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\core\handlers\base.py", line 221, in _get_response
    response = response.render()
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\base.py", line 579, in parse
    self.invalid_block_tag(token, command, parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\.venv\Lib\site-packages\django\template\base.py", line 644, in invalid_block_tag
    raise self.error(
    ...<3 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Template: C:\Users\hda00\Desktop\Projects\Django_Projects\Task_and_Workflow_Management\tenant_management\apps\web\templates\web\login.html, Invalid block tag on line 134: 'endblock'. Did you forget to register or load this tag?
2026-02-27 10:45:42 | ERROR | apps | user=None | method=GET | path=/login/ | status=500 | duration=37ms
2026-02-27 10:45:42 | ERROR | django.server | "GET /login/ HTTP/1.1" 500 173163
2026-02-27 10:45:42 | WARNING | apps | user=None | method=GET | path=/favicon.ico | status=404 | duration=4ms
2026-02-27 10:45:42 | WARNING | django.request | Not Found: /favicon.ico
2026-02-27 10:45:42 | WARNING | django.server | "GET /favicon.ico HTTP/1.1" 404 5228
2026-02-27 10:52:36 | INFO | apps | user=None | method=GET | path=/login/ | status=200 | duration=7ms
2026-02-27 10:52:36 | INFO | django.server | "GET /login/ HTTP/1.1" 200 5303
2026-02-27 10:52:36 | INFO | django.server | "GET /static/web/js/app.js HTTP/1.1" 200 7445
2026-02-27 10:52:36 | INFO | django.server | "GET /static/web/css/style.css HTTP/1.1" 200 30780
2026-02-27 10:52:48 | INFO | apps | user=None | method=POST | path=/api/accounts/login/ | status=200 | duration=676ms
2026-02-27 10:52:48 | INFO | django.server | "POST /api/accounts/login/ HTTP/1.1" 200 489
2026-02-27 10:52:48 | INFO | apps | user=None | method=GET | path=/dashboard/ | status=200 | duration=1ms
2026-02-27 10:52:48 | INFO | django.server | "GET /dashboard/ HTTP/1.1" 200 10646
2026-02-27 10:52:48 | INFO | apps | user=6 | method=GET | path=/api/organizations/mine/ | status=200 | duration=154ms
2026-02-27 10:52:48 | INFO | django.server | "GET /api/organizations/mine/ HTTP/1.1" 200 345
